--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "chalk": "^5.3.0",
     "cheerio": "1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "grammy": "^1.18.1",
     "redis": "^4.6.8"
   }
